Update Time Table Reader with Clash Detection.ipynb

--- a/Time Table Reader with Clash Detection.ipynb
+++ b/Time Table Reader with Clash Detection.ipynb
@@ -599,8 +599,8 @@
     "    for day in days:\n",
     "        test_df = df[df['Day'] == day] # case study\n",
     "\n",
-    "        test_df['Start Time'] = test_df['Start Time'].apply(std)\n",
-    "        test_df['End Time'] = test_df['End Time'].apply(std)\n",
+    "        # test_df['Start Time'] = test_df['Start Time'].apply(std)\n",
+    "        # test_df['End Time'] = test_df['End Time'].apply(std)\n",
     "        test_df['Difference'] = test_df['End Time'] - test_df['Start Time']\n",
     "\n",
     "        # now i want to increment the start time by a factor of 'Difference'\n",
