Update Time Table Reader with Clash Detection.ipynb

--- a/Time Table Reader with Clash Detection.ipynb
+++ b/Time Table Reader with Clash Detection.ipynb
@@ -608,7 +608,7 @@
     "\n",
     "        test_df2 = test_df\n",
     "        for i in range(len(test_df2)):\n",
-    "            test_df2 = df[df['Day'] == day]",
+    "            test_df2 = df[df['Day'] == day]\n",
     "            counts_series = (test_df2['Start Time'].value_counts())\n",
     "            ind = list(counts_series[counts_series > 1].index)\n",
     "            for x in ind:\n",
