--- a/Time Table Reader with Clash Detection.ipynb
+++ b/Time Table Reader with Clash Detection.ipynb
@@ -13,7 +13,7 @@
    "id": "6df96f9b",
    "metadata": {},
    "source": [
-    "You have to enter the subject name in the exact same format as it appears in the TimeTable. \n",
+    "You have to enter the subject name in the exact same format as it appears in the TimeTable. Make sure to keep the latest version of the Timetable in the project Folder \n",
     "For Example, if you are studying computer networks, Enter : 'Comp Networks'"
    ]
   },
