--- a/Time Table Reader.ipynb
+++ b/Time Table Reader.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "You have to enter the subject name in the exact same format as it appears in the TimeTable. \n",
-    "For Example, if you are studying computer networks, Enter : 'Comp Networks'"
+    "For Example, if you are studying computer networks, Enter : 'Comp Networks'. Make sure to keep the latest version of the Timetable in the project Folder"
    ]
   },
   {
